# issueclear

./: .gitignore  README.md  pyproject.toml  query.py  requirements.txt
issueclear/: api.py  customized_hf.py  db.py  ic.py  issue.py  llm_query.py  utils.py
issueclear/scrape/: common.py  github.py  jira.py
